<resources>
    <string name="app_name">The Quiz App</string>
    <string name="quiz_tekst" translatable="false">Quizzzzzzz</string>
    <string name="start_quiz_tekst">Start Quiz</string>
    <string name="gallery_button">"Kom og sjå "</string>
    <string name="gallery_headline">Gallery</string>
    <string name="add_image">Add Image</string>
    <string name="list_sort">Sort Images (A-Z)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_overskrift">QUIZZZZZZYYYYY</string>
    <string name="bilde">Bilde</string>
</resources>