<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="#BBB7FB"
            android:fontFamily="cursive"
            android:text="@string/quiz_tekst"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button_start_quiz"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:backgroundTint="#DFCB2E"
            android:contentDescription="Start Quiz"
            android:text="@string/start_quiz_tekst"
            android:textColor="#A02200" />

        <Button
            android:id="@+id/button_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3573A3"
            android:text="@string/gallery_button" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.RatingBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8339BB1C" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>